# StreamSense-Serve

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  NOTICE  README.md  README.zh-CN.md  SECURITY.md  THIRD_PARTY_NOTICES.md  docker-compose.yml  pyproject.toml  run_manifest.md
.github/workflows/: ci.yml
.light/: passport.yaml
benchmarks/data/: router_fixture.jsonl
benchmarks/results/: api_health_load_4090.json  asr_small_jfk_4090.json  asr_small_jfk_noise_4090.json  jfk_api_end_to_end_4090.json  routing_fixture.json  vlm_qwen25_3b_4090.json
docs/: DATASET_CARD.md  DESIGN_SYSTEM.md  FAILURE_CASES.md  MODEL_CARD.md  PROJECT_PLAN.md
scripts/: asr_robustness_benchmark.py  download_jfk_sample.py  generate_visual_fixture.py  gpu_asr_benchmark.py  load_test.py  routing_benchmark.py  smoke_test.py  vlm_stream_benchmark.py
src/streamsense/: __init__.py  agent.py  analyzers.py  api.py  cli.py  evaluation.py  media.py  routing.py  schema.py  store.py  telemetry.py  vlm.py
src/streamsense/static/: index.html
tests/: __init__.py  test_analyzers.py  test_api.py  test_cli.py  test_evaluation.py  test_media.py  test_routing.py  test_schema.py  test_store_and_agent.py  test_vlm.py
