[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "streamsense-serve"
version = "0.1.0"
description = "Evidence-first real-time audiovisual event inference with adaptive VLM routing."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{name = "Jianting Shi"}]
dependencies = [
  "fastapi>=0.115,<1",
  "httpx>=0.27,<1",
  "numpy>=1.26,<3",
  "pydantic>=2.8,<3",
  "python-multipart>=0.0.9,<1",
  "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
  "pytest-cov>=5,<7",
  "ruff>=0.8,<1",
]
media = [
  "opencv-python-headless>=4.10,<5",
  "soundfile>=0.12,<1",
]
asr = ["faster-whisper>=1.1,<2"]
gpu = [
  "accelerate>=1.2,<2",
  "qwen-vl-utils>=0.0.8,<1",
  "torch>=2.4,<3",
  "transformers>=4.49,<5",
]

[project.scripts]
streamsense = "streamsense.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/streamsense"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]

